@@ -12,7 +12,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: stringObj.test,v 1.16 2004/05/19 20:15:32 dkf Exp $
+# RCS: @(#) $Id$
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -160,6 +160,12 @@ test stringObj-6.8 {Tcl_AppendStringsToObj procedure, object totally empty} test
     teststringobj appendstrings 1 {}
     list [teststringobj length2 1] [teststringobj get 1]
 } {0 {}}
+test stringObj-6.9 {Tcl_AppendStringToObj, pure unicode} {
+    testobj freeallvars
+    teststringobj set2 1 [string replace abc 1 1 d]
+    teststringobj appendstrings 1 foo bar soom
+    teststringobj get 1
+} adcfoobarsoom
 
 test stringObj-7.1 {SetStringFromAny procedure} testobj {
     testobj freeallvars
